log
Tue 09 May 2023 11:02:15 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:13: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   heapElem* heapArray = (heapElem*) malloc(sizeof(heapElem));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
97fbe4a
Tue 09 May 2023 11:02:44 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:13: error: expected expression before ‘]’ token
   40 |   heapArray[] = {0};
      |             ^
heap.c:39:13: error: variable ‘heapArray’ set but not used [-Werror=unused-but-set-variable]
   39 |   heapElem* heapArray = (heapElem*) malloc(sizeof(heapElem));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3f6632d
Tue 09 May 2023 11:02:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:18: error: expected expression before ‘{’ token
   40 |   heapArray[0] = {0};
      |                  ^
Compilation failed
01c794c
Tue 09 May 2023 11:03:00 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:12: error: statement with no effect [-Werror=unused-value]
   40 |   heapArray[0];
      |   ~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
04003ee
Tue 09 May 2023 11:03:40 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
606c3ae
Tue 09 May 2023 11:03:50 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
89897b2
Tue 09 May 2023 11:04:22 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
e0c0ea9
